[package]
name = "elevator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web-lab = "0.24"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
component = "0.1.1"
